Partition old files and create React app

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "dreniff3.github.io",
-  "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dreniff3/dreniff3.github.io.git"
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dreniff3/dreniff3.github.io/issues"
-  },
-  "homepage": "https://github.com/dreniff3/dreniff3.github.io#readme",
   "devDependencies": {
-    "node-sass": "^8.0.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.0.8"
   }
 }
